--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,13 +18,19 @@ jobs:
       with:
         node-version: '14'
 
-    - name: Build Docker image
-      run: |
-        docker build -t your-image-name .
-        docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-        docker tag your-image-name ${{ secrets.DOCKER_REGISTRY }}/your-image-name
-        docker push ${{ secrets.DOCKER_REGISTRY }}/your-image-name
-      env:
-        DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-        DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-        DOCKER_REGISTRY: your-docker-registry
+    - name: Login to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: williamtrung
+        password: dckr_pat_UCimcgRD99WRItUsuZEkJtMvElk
+    
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+
+    - name: Build and push
+      uses: docker/build-push-action@v5
+      with:
+        context: .
+        file: ./Dockerfile  # Adjust the path to your Dockerfile
+        push: true
+        tags: williamtrung/bird_training_transaction_system:latest
